fix row h3 overflow add loading icon and click for refresh

--- a/src/component/row/row.styl
+++ b/src/component/row/row.styl
@@ -24,6 +24,9 @@
         color #333
         line-height 1.25
         flex 1 66.66667%
+        height 1.6rem
+        text-overflow clip
+        overflow hidden
       .img-block
         flex 1 33.33333%
         height 2rem
